testproject/testfail/src/test/java/de/zebrajaeger/testproject/compilefail/TestFailAppTest.java
package de.zebrajaeger.testproject.compilefail;

import org.junit.Assert;
import org.junit.Test;

/**
 * @author Lars Brandt, Silpion IT Solutions GmbH
 */
public class TestFailAppTest {

    @Test
    public void success_1() {

    }

    @Test
    public void success_2() {

    }

    @Test
    public void success_3() {

    }

    @Test
    public void success_4() {

    }

    @Test
    public void success_5() {

    }

    @Test
    public void fail_1() {
        Assert.assertTrue(false);
    }

    @Test
    public void success_6() {

    }

    @Test
    public void success_7() {

    }

    @Test
    public void success_8() {

    }

    @Test
    public void success_9() {

    }

    @Test
    public void success_10() {

    }
}
